2008-09-13  Jan Hubicka  <jh@suse.cz>

	* cgraph.c: Include value-prof.h
	* Makefile.in (cgraph.o): Add value-prof.h dependency.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	PR middle-end/32581
	* tree-profile.c (add_abnormal_goto_call_edges): New function.
	(tree_gen_interval_profiler, tree_gen_pow2_profiler,
	tree_gen_one_value_profiler, tree_gen_average_profiler,
	tree_gen_ic_func_profiler, tree_gen_ior_profiler): Use it.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	* i386.c (ix86_expand_movmem, ix86_expand_movstr): Avoid processing too
	many bytes on misalligned blocks.

2008-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/cfg.texi: Fix some typos.
	* doc/extend.texi: Likewise.
	* doc/install.texi: Likewise.
	* doc/invoke.texi: Likewise.
	* doc/rtl.texi: Likewise.
	* doc/tree-ssa.texi: Likewise.

2008-09-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30141
	* tree-nested.c (finalize_nesting_tree_1): Generate valid
	gimple stores for memory rhs.

2008-09-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/37489
	* cse.c (fold_rtx): Don't return const_true_rtx for float
	compare if FLOAT_STORE_FLAG_VALUE is undefined.

2008-09-13  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/37392
	* tree-inline.c (remap_gimple_stmt): Do not remap return value.

2008-09-13  Martin Jambor  <mjambor@suse.cz>
	    Jan Hubicka  <jh@suse.cz>

	* cgraph.c (free_edges): New variable.
	(NEXT_FREE_EDGE): New macro.
	(cgraph_free_edge): New function.
	(cgraph_remove_edge): Call cgraph_remove_edge_1.
	(cgraph_node_remove_callees): Likewise.
	(cgraph_node_remove_callers): Likewise.
	(cgraph_create_edge): Reuse edges from the free list.  Do not
	update uid if doing so.
	(cgraph_remove_*_hook): Add free call.

2008-09-13  Richard Sandiford  <rdsandiford@googlemail.com>

	* ira-color.c (conflict_allocno_vec): Delete.
	(update_cost_queue_elem): New structure.
	(update_cost_queue): New variable.
	(update_cost_queue_tail): Likewise.
	(update_cost_queue_elems): Likewise.