@@ -74,13 +74,20 @@ static void
 register_frame_ctor (void)
 {
   __gcc_register_frame ();
+#if DEFAULT_USE_CXA_ATEXIT
+  /* If we use the __cxa_atexit method to register C++ dtors
+     at object construction,  also use atexit to register eh frame
+     info cleanup.  */
+  atexit (__gcc_deregister_frame);
+#endif
 }
 
-static void deregister_frame_ctor (void) __attribute__ ((destructor (0)));
+#if !DEFAULT_USE_CXA_ATEXIT
+static void deregister_frame_dtor (void) __attribute__ ((destructor (0)));
 
 static void
-deregister_frame_ctor (void)
+deregister_frame_dtor (void)
 {
   __gcc_deregister_frame ();
 }
-
+#endif
